<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">AC</string>
    <string name="division_operator">÷</string>
    <string name="equals_operator">=</string>
    <string name="zero">0</string>
    <string name="decimal_point">.</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="plus_operator">+</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="minus_operator">−</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiplication_operator">×</string>
    <string name="dot">.</string>
    <string name="backspace">⌫</string>
</resources>