<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ismail.creatvt.mytodoapp.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/output_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/appBackground"
            android:gravity="bottom|end"
            android:padding="12dp"
            android:text="@{viewModel.outputText}"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/keypad_background"
            android:orientation="horizontal"
            android:padding="24dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="@{viewModel::onClearClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/clear"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/seven"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/four"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/one"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/dot"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="@{viewModel::onBackspaceClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/backspace"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/eight"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/five"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/two"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/zero"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="@{viewModel::onOperatorClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/division_operator"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/nine"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/six"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:gravity="center"
                    android:onClick="@{viewModel::onNumberClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/three"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/button_background_ripple"
                    android:clickable="false"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="@{viewModel::onOperatorClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/multiplication_operator"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="@{viewModel::onOperatorClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/minus_operator"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="@{viewModel::onOperatorClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/plus_operator"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_background_ripple"
                    android:backgroundTint="@color/colorSecondary"
                    android:gravity="center"
                    android:onClick="@{viewModel::onEqualsClick}"
                    android:paddingHorizontal="10dp"
                    android:text="@string/equals_operator"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </LinearLayout>
</layout>